Overlap Image Fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -241,7 +241,7 @@
 
         img {
             width: 100%;
-            height: 190px;
+            height: auto;
             max-height: 190px;
         }
     }
